--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"homepage":"https://fosu-kelvin.github.io/netflixClone",
+"homepage":"https://Fosu-Kelvin.github.io/netflixClone",
   "name": "netflix-build",
   "version": "0.1.0",
   "private": true,
